<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cineBlue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="290dp"
        android:layout_height="172dp"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/logo_cine_quiz"
        android:src="@drawable/LogoPrincipal2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/fa_a_login_com_suas_redes_sociais"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/shape_rounded"
            android:src="@drawable/ic_launcher_foreground" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/shape_rounded"
            android:src="@drawable/ic_launcher_foreground" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/ou_com_seu_email_e_senha"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="13dp"
        android:background="@drawable/shape_edit_text"
        android:drawableEnd="@drawable/ic_email"
        android:paddingHorizontal="15dp"
        android:text="@string/email"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="16sp" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_edit_text"
        android:drawableEnd="@drawable/ic_lock"
        android:paddingHorizontal="15dp"
        android:text="@string/senha"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="13dp"
        android:background="@drawable/shape_button_login"
        android:text="@string/log_in"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/ainda_n_o_tem_uma_conta"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="13dp"
        android:background="@drawable/shape_button_register"
        android:text="@string/crie_sua_conta"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>