<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cineAzul"
    tools:context=".ui.OpcoesActivity">

    <include
        android:id="@+id/toolbarOpcoes"
        layout="@layout/toolbar_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtOpcoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/opcoes"
        android:textAllCaps="true"
        android:textColor="@color/colorBranco"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_card_opcoes"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOpcoes"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swithOpcoesNotificacoes"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_botao_opcao_amarelo"
            android:paddingStart="40dp"
            android:paddingEnd="30dp"
            android:text="@string/notificacoes"
            android:textAllCaps="true"
            android:textColor="@color/cineAzul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swithOpcoesMusica"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_botao_opcao_laranja"
            android:paddingStart="40dp"
            android:paddingEnd="30dp"
            android:text="@string/musica"
            android:textAllCaps="true"
            android:textColor="@color/colorBranco"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swithOpcoesSons"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_botao_opcao_amarelo"
            android:paddingStart="40dp"
            android:paddingEnd="30dp"
            android:text="@string/sons"
            android:textAllCaps="true"
            android:textColor="@color/cineAzul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnOpcoesSair"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_botao_opcao_rosa"
            android:text="@string/logout"
            android:textAllCaps="true"
            android:textColor="@color/colorBranco"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="40dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>