<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cineAzul"
    android:focusableInTouchMode="true"
    tools:context=".ui.RedefineSenhaActivity">

    <include
        android:id="@+id/toolbarRedefineSenha"
        layout="@layout/toolbar_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivRedefineSenhaLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_pipoca" />

        <TextView
            android:id="@+id/tvRedefineSenhaDigite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/digite_email_redefinir_senha"
            android:textAllCaps="true"
            android:textColor="@color/colorBranco"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtRedefineSenhaEmail"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_anel"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/idaa"
            android:paddingHorizontal="15dp"
            android:textColor="@color/colorBranco"
            android:textColorHint="@color/colorBranco"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnRedefineSenha"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_botao_verde_sombreado"
            android:text="@string/continuar"
            android:textColor="@color/colorBranco"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

